# parakeet-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: decoder.rs  encoder.rs  end_to_end.rs  mel_spectrogram.rs  memory.rs  resampling.rs  vad.rs
benches/common/: mod.rs
docs/announcements/: v0.1.0.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.3.md
scripts/: release.sh
src/: cli.rs  download.rs  lib.rs  listen.rs  main.rs  serve.rs
src/audio/: buffer.rs  capture.rs  mel.rs  mod.rs  resample.rs
src/model/: decoder.rs  encoder.rs  mod.rs  tokenizer.rs
src/vad/: mod.rs  silero.rs
